# MO_EstimatorEngine

./: .gitignore  README.md
backend/: corrugate.csv  demo.py  main.py  mongo.py  pyproject.toml  requirements.txt  seed_flute_prices.py  tests.py
backend/agent/: agent.py
backend/agent/prompts/: system.py
backend/agent/tools/: form_amount_regression.py  form_calculator.py  quote_adjustment.py
backend/lib/: classes.py  db.py  globals.py  mongo.py  persisted_project.py  print_form_calculator.py  project.py  static_cost_calculator .py  static_cost_calculator.py
backend/lib/classes/: __init__.py  db.py  form.py  misc.py  project.py
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/app/datacollector/: page.tsx
frontend/components/: Alert.tsx  ChatWindow.tsx  Chatbot.css  Chatbox.tsx  Dropdown.tsx  ElementsManager.tsx  Header.tsx  QuoteBreakdown.tsx  Sidebar.tsx  UserDisplay.tsx
frontend/pages/: DataCollector.tsx  Inputter.tsx  MidnightAI.tsx  SignIn.tsx
