[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv",
    "fastapi",
    "pymongo",
    "rectpack",
    "uvicorn>=0.45.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.2",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = [
    # pycodestyle errors
    "E",
    # pycodestyle warnings
    "W",
    # pyflakes
    "F",
    # isort (import sorting)
    "I",
    # pep8-naming
    "N",
    # pyupgrade
    "UP",
    # pydocstyle (docstring conventions)
    "D",
]
ignore = [
    # too many blank lines (we want 2)
    "E303",
    # blank lines found after function decorator
    "E304",
    # blank line contains whitespace
    "W293",
    # Missing docstring in public module (optional)
    "D100",
    # Missing docstring in public package (optional)
    "D104",
    # Missing docstring in magic method (optional)
    "D105",
    # Missing docstring in __init__ (optional)
    "D107",
    # Incompatible with D211 (blank line before class)
    "D203",
    # Incompatible with D203 (no blank line before class)
    "D211",
    # Incompatible with D213 (multi-line summary first line)
    "D212",
    # Incompatible with D212 (multi-line summary second line)
    "D213",
]

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings
convention = "google"

[tool.ruff.lint.isort]
# Configure import sorting
known-first-party = ["lib", "tests"]
combine-as-imports = true

[tool.ruff.format]
# Ruff formatter configuration
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
